--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,66 +1,48 @@
-name: CI/CD - Test, Build, Smoke Test & Push
-
+name: CI - test & build & smoke-test
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 jobs:
-  ci-cd:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt pytest
-
-      - name: Run tests
-        run: pytest -q
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nitish-devops-flask:latest
-
-      - name: Smoke Test Container
-        run: |
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/nitish-devops-flask:latest
-          docker run -d --name smoke-test -p 5000:5000 ${{ secrets.DOCKERHUB_USERNAME }}/nitish-devops-flask:latest
-          n=0
-          until [ $n -ge 10 ]
-          do
-            status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5000/health || echo "000")
-            if [ "$status" = "200" ]; then
-              echo "Smoke test passed: /health → 200"
-              break
-            fi
-            n=$((n+1))
-            echo "Waiting for app... ($n/10)"
-            sleep 2
-          done
-          if [ "$status" != "200" ]; then
-            echo "Smoke test FAILED"
-            docker logs smoke-test
-            exit 1
-          fi
-          docker rm -f smoke-test
+  test-and-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip && pip install -r requirements.txt
+      - name: Run tests
+        run: pytest -q
+      - name: Build docker image
+        run: |
+          docker build -t devops-flask-ci:latest .
+      - name: Run container
+        run: |
+          docker run -d --name devops-flask-ci -p 5000:5000 devops-flask-ci:latest
+          # wait until it's ready (with retries)
+          n=0
+          until [ $n -ge 10 ]
+          do
+            status_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5000/health || echo "000")
+            if [ "$status_code" = "200" ]; then
+              echo "Service returned 200"
+              break
+            fi
+            n=$((n+1))
+            echo "Waiting for service... attempt $n"
+            sleep 2
+          done
+          if [ "$status_code" != "200" ]; then
+            echo "Health check failed, dumping container logs:"
+            docker logs devops-flask-ci || true
+            exit 1
+          fi
+      - name: Cleanup
+        if: always()
+        run: |
+          docker rm -f devops-flask-ci || true
